# compiladores-2026-1

./: CRONOGRAMA.rst  README.md  _cronograma.md
01-bf/: abc.bf  bf.py  bfc.py  exemplo.c  hello.c  out  out.c  soma.bf  soma.c
02-json/: exemplo.json  json_reader.py  list.json  pyproject.toml
lox/: pyproject.toml
lox/exemplos/: hello.lox
lox/src/lox/: __init__.py  cli.py  re_scanner.py  scanner.py  token.py
lox/tests/: test_lex.py
