[project]
name = "lox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chips", email = "fabiomacedomendes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.3",
]

[project.scripts]
lox = "lox.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
